# Copyright (c) 2023 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


static_library("libzcb"){
  sources = [
    #Zigbee Control Bridge
    "IotCommon/dump.c",
    "IotCommon/fileCreate.c",
    "IotCommon/iotSemaphore.c",
    "IotCommon/iotSleep.c",
    "IotCommon/newDb.c",
    "IotCommon/newLog.c",
    "IotCommon/nibbles.c",
    # "IotCommon/parsing.c",
    "IotCommon/systemtable.c",
    "ZCB/cmd.c",
    "ZCB/Serial.c",
    "ZCB/SerialLink.c",
    "ZCB/Utils.c",
    "ZCB/zcb.c",
    "ZCB/zcb_main.c",
    "ZCB/ZigbeeDevices.c",
  ]


  configs += [
    ":libzcb_config",
  ]

  complete_static_lib = true
}


config("libzcb_config") {
  defines = [ "ENABLE_DOOM_MELON" ]
  include_dirs = [
    "IotCommon",
    "ZCB"
    ]

#   cflags = [
#     "-Wno-unused-function",
#   ]

}